# human-memory

./: .gitignore  .pylintrc  README.md  dra.py  dra_plotting_newest.py  dra_rangel.py  dra_rangel_parallelActions.py  experiment.py  memoryProfiling.py  plotting.py  plotting_rangel.py  pyproject.toml  requirements.txt  resourceAllocator.py  task.py  train.py  trainAllParams.py  train_rangel.py
BottleneckTask/: dra.py  train.py
RangelTask_archive/: dra_rangel.py  dra_rangel_parallelActions.py  experiment_rangel.py  plotting_rangel.py  plotting_rangel_old.py  task.py  train_rangel.py
docs/: slot_machines_instructions.pptx
src/: analysis_script.py  analysis_script_sub-bhlr.py  customtypes.py  definitions.py  experiment.py  indexer.py  likelihood_new.py  main.py  model_recovery.py  models.py  plot_model_predictions_both_tasks.py  q_table.py  resourceAllocator.py  resourceAllocators.py  simulator.py  switch_exp_simulations.py  task.py  tasks.py  trainAllParams.py  train_script.py  utils.py
src/analysis/: adapter.py  bayesian_logit.py  data.py  filter.py  hierarchical.py  likelihood.py  plot.py  plot_summary_stats.py  process.py  psytrack.py
src/data/: adaptDelta.py  addLapses.py  bestDelta_pvals.py  bestDelta_stan.py  bestDelta_stan_plots.py  cleaner.py  extractFakeDataStuff.py  extractParams.py  generateFakeData.py  processor.py  stan_code.py  stan_preparation.py  transformer.py
src/model/: bayesian_ideal_observer.py  model_new.py  models.py  q_table.py  simulator.py  tasks.py  tasks_new.py  utils.py
src/pilot_data_analysis/: choice_analysis.py  extract_data.py  (+3 more)
(+20 files in other folders)
